--- a/be/package.json
+++ b/be/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "nodemon app.js",
     "start": "node app.js"
   },
   "dependencies": {
     "express": "~4.16.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
