--- a/be/package.json
+++ b/be/package.json
@@ -7,8 +7,11 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.11.8",
+    "morgan": "~1.9.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
