--- a/be/package.json
+++ b/be/package.json
@@ -14,6 +14,12 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.1"
   }
 }
