--- a/be/package.json
+++ b/be/package.json
@@ -7,6 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "mongoose": "^5.11.8",
