--- a/be/package.json
+++ b/be/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "mongoose": "^5.11.8",
