[reafactor] 전체 파일 eslint, prettier 적용

--- a/fe/.eslintrc.json
+++ b/fe/.eslintrc.json
@@ -3,18 +3,23 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended" ],
   "parserOptions": {
     "sourceType": "module",
-
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": 12
   },
-  "plugins": ["react"],
+  "plugins": ["react", "prettier"],
   "rules": {
     "indent": ["error", 2], // 들여쓰기 1칸
-    "semi": 2 // 세미클론 사용
+    "semi": 2, // 세미클론 사용
+    "prettier/prettier": ["error",
+      {
+          "endOfLine": "auto"
+      }],
+    "react/prop-types": 0,
+    "react/jsx-key": 0
   }
 }
