--- a/fe/.eslintrc.json
+++ b/fe/.eslintrc.json
@@ -3,7 +3,11 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended" ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "sourceType": "module",
     "ecmaFeatures": {
@@ -15,10 +19,12 @@
   "rules": {
     "indent": ["error", 2], // 들여쓰기 1칸
     "semi": 2, // 세미클론 사용
-    "prettier/prettier": ["error",
+    "prettier/prettier": [
+      "error",
       {
-          "endOfLine": "auto"
-      }],
+        "endOfLine": "auto"
+      }
+    ],
     "react/prop-types": 0,
     "react/jsx-key": 0
   }
