[style] switch를 사용할 경우에 eslint 에러가 발생해서 switch에서도 동일하게 적용

--- a/fe/.eslintrc.json
+++ b/fe/.eslintrc.json
@@ -18,7 +18,7 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
-    "indent": ["error", 2], // 들여쓰기 1칸
+    "indent": ["error", 2, { "SwitchCase": 1 }], // 들여쓰기 1칸
     "semi": 2, // 세미클론 사용
     "prettier/prettier": [
       "error",
