--- a/fe/package.json
+++ b/fe/package.json
@@ -20,7 +20,8 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "webpack": "^4.44.0"
   },
   "browserslist": {
     "production": [
@@ -38,7 +39,6 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
-    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
@@ -51,7 +51,6 @@
     "mini-css-extract-plugin": "^1.3.3",
     "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.1"
   }
