--- a/fe/.eslintrc.json
+++ b/fe/.eslintrc.json
@@ -26,6 +26,7 @@
         "endOfLine": "auto"
       }
     ],
+    "allowImportExportEverywhere": true,
     "react/prop-types": 0,
     "react/jsx-key": 0
   }
