--- a/be/package.json
+++ b/be/package.json
@@ -7,6 +7,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.821.0",
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.5",
@@ -15,6 +16,8 @@
     "express": "~4.16.1",
     "mongoose": "^5.11.8",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
