--- a/be/package.json
+++ b/be/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "aws-sdk": "^2.821.0",
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.11.8",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
