--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "dotenv-webpack": "^6.0.0",
     "path": "^0.12.7",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
