[refactor] 개발과 배포 스크립트를 작성
개발 : dev
배포 : build

--- a/fe/package.json
+++ b/fe/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "webpack serve",
+    "dev": "webpack serve",
+    "build": "webpack --config webpack.config.js",
     "start": "react-scripts start"
   },
   "dependencies": {
