[refactor] 개발환경에 따라 process.env가 다르게 설정되도록 수정 및 script 변경

--- a/fe/package.json
+++ b/fe/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack serve",
-    "build": "webpack --config webpack.config.js",
+    "dev": "set NODE_ENV=dev&& webpack serve",
+    "build": "set NODE_ENV=prod&& webpack --mode production",
     "start": "react-scripts start"
   },
   "dependencies": {
