--- a/be/package.json
+++ b/be/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "pm2 start ./ecosystem.config.js"
   },
   "dependencies": {
     "aws-sdk": "^2.821.0",
@@ -20,7 +20,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pm2": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^7.15.0",
