--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,5 +31,5 @@ jobs:
         script: |
           cd ${{ secrets.WEB_PATH }} && git pull origin main
           cd ${{ secrets.WEB_PATH_FE }} && npm install && npm run build
-          cd ${{ secrets.WEB_PATH_BE }} && npm install
+          cd ${{ secrets.WEB_PATH_BE }} && npm install && pm2 reload myapp
  
