--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: WEB
 on:
   pull_request:
     types: [closed] # when PR closed
-    branches: [ main ]
- 
+    branches: [main]
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -14,22 +14,21 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged
-    
+
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:    
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    # Runs ssh deploy for CI, CD
-    - name: executing remote ssh commands using password
-      if: github.event_name == 'pull_request'
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        # port: ${{ secrets.PORT }} # default : 22
-        script: |
-          cd ${{ secrets.WEB_PATH }} && git pull origin main
-          cd ${{ secrets.WEB_PATH_FE }} && npm install && npm run build
-          cd ${{ secrets.WEB_PATH_BE }} && npm install && pm2 reload myapp
- 
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      # Runs ssh deploy for CI, CD
+      - name: executing remote ssh commands using password
+        if: github.event_name == 'pull_request'
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          # port: ${{ secrets.PORT }} # default : 22
+          script: |
+            cd ${{ secrets.WEB_PATH }} && git pull origin main
+            cd ${{ secrets.WEB_PATH_FE }} && npm install && npm run build
+            cd ${{ secrets.WEB_PATH_BE }} && npm install && npm run build
