--- a/be/package.json
+++ b/be/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "pm2 start ./ecosystem.config.js"
+    "start": "pm2 start ./ecosystem.config.js",
+    "build": "pm2 reload myapp"
   },
   "dependencies": {
     "aws-sdk": "^2.821.0",
